# opengl-rs

./: Cargo.toml  README.md
lib/gl/: Cargo.toml
lib/vec-2-10-10-10/: COPYRIGHT  Cargo.toml
lib/vec-2-10-10-10/src/: lib.rs
render_derive/: Cargo.toml
render_derive/src/: lib.rs
src/: main.rs  render.rs  resources.rs
src/render/: buffer.rs  data.rs  shader.rs
