[package]
name = "opengl-rs"
version = "0.1.0"
edition = "2021"
authors = ["Vladyslav <nylestroke> Potapenko"]

[dependencies]
gl = { path = "./lib/gl" }
render_derive = { path = "./render_derive" }
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
failure = "0.1"

[features]
gl_debug = ["gl/debug"]

[build-dependencies]
walkdir = "2.1"
